[package]
name = "ejwu-rust-hanab-live-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
clap = { version = "4.3.24", features = ["derive"] }
color-eyre = "0.6.2"
derive_more = "0.99.17"
ezsockets = { version = "0.5.1", features = ["native-tls"] }
futures = "0.3.28"
http = "0.2.9"
reqwest = { version = "0.11.20", features = ["json", "cookies"] }
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
serde_with = "3.3.0"
thiserror = "1.0.47"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = "2.4.0"

[profile.dev.package.backtrace]
opt-level = 3
